--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -23,6 +23,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="BatFiles\RemoveOldVersionRegData.bat" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="BatFiles\RemoveOldVersionRegData.bat" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EasyUpdateFromGithub" Version="1.3.3.20241216" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="YamlDotNet" Version="16.2.1" />
