多条更新内容： **为软件新增了多语言功能 *为软件添加英语(已完成大部分内容) 更改了DataCore一些结构的位置 删除了一些文件中不必要的using

--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -9,7 +9,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationIcon>TimedPower_logo.ico</ApplicationIcon>
 
-	  <AssemblyTitle>用于定时电源操作</AssemblyTitle>
+	  <AssemblyTitle>定时电源操作工具</AssemblyTitle>
 	  <Company>Hgnim</Company>
 	  <Product>TimedPower</Product>
 	  <Description>定时电源</Description>
