解决了IDE设计器错误的问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .vs
+.vscode
 */bin
 */obj
 */Properties
 */appsettings*.json
 *.csproj.user
 */.config
+
+TimedPower/Resources/langs/*.Designer.cs
