--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -16,10 +16,10 @@
 	  <Copyright>Copyright (C) 2024-2025 Hgnim, All rights reserved.</Copyright>
 	  <AssemblyName>定时电源</AssemblyName>
 	  
-	  <AssemblyVersion>2.7.7</AssemblyVersion>
-	  <FileVersion>2.7.7.0109</FileVersion>
-	  <VersionPrefix>2.7.7.20250109</VersionPrefix>
-	  <VersionSuffix></VersionSuffix>
+	  <AssemblyVersion>2.8.7</AssemblyVersion>
+	  <FileVersion>2.8.7.0122</FileVersion>
+	  <VersionPrefix>2.8.7.20250122</VersionPrefix>
+	  <VersionSuffix>pre1</VersionSuffix>
   </PropertyGroup>
 
   <ItemGroup>
