--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -32,7 +32,9 @@
 
   <ItemGroup>
     <PackageReference Include="EasyUpdateFromGithub" Version="1.3.3.20241216" />
+    <PackageReference Include="Markdig" Version="0.40.0" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2478.35" />
     <PackageReference Include="YamlDotNet" Version="16.2.1" />
   </ItemGroup>
 
