--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -17,9 +17,9 @@
 	  <AssemblyName>定时电源</AssemblyName>
 	  
 	  <AssemblyVersion>2.8.7</AssemblyVersion>
-	  <FileVersion>2.8.7.0122</FileVersion>
-	  <VersionPrefix>2.8.7.20250122</VersionPrefix>
-	  <VersionSuffix>pre1</VersionSuffix>
+	  <FileVersion>2.8.7.0131</FileVersion>
+	  <VersionPrefix>2.8.7.20250131</VersionPrefix>
+	  <VersionSuffix>pre2</VersionSuffix>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,6 +35,7 @@
     <PackageReference Include="Markdig" Version="0.40.0" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2478.35" />
+    <PackageReference Include="ReaLTaiizor" Version="3.8.1.1" />
     <PackageReference Include="YamlDotNet" Version="16.2.1" />
   </ItemGroup>
 
