--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -35,8 +35,13 @@
     <PackageReference Include="Markdig" Version="0.40.0" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2478.35" />
-    <PackageReference Include="ReaLTaiizor" Version="3.8.1.1" />
     <PackageReference Include="YamlDotNet" Version="16.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="ReaLTaiizor">
+      <HintPath>dll\ReaLTaiizor.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
