--- a/TimedPower/TimedPower.csproj
+++ b/TimedPower/TimedPower.csproj
@@ -21,9 +21,9 @@
 	  
 	  
 	  <AssemblyVersion>2.8.7</AssemblyVersion>
-	  <FileVersion>2.8.7.0201</FileVersion>
-	  <VersionPrefix>2.8.7.20250201</VersionPrefix>
-	  <VersionSuffix>pre3</VersionSuffix>
+	  <FileVersion>2.8.7.0204</FileVersion>
+	  <VersionPrefix>2.8.7.20250204</VersionPrefix>
+	  <VersionSuffix></VersionSuffix>
   </PropertyGroup>
 
   <ItemGroup>
